<resources>
    <string name="app_name">GroupBuilder</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_new_account">Register new account</string>
    <string name="login">Login</string>
    <string name="loginPassword">Password</string>
    <string name="loginEmail">Email</string>
    <string name="account_login">Account login</string>
    <string name="sign_up">Sign Up</string>
    <string name="YourGroups">Your Groups</string>
    <string name="groupDesc">Manage your groups</string>
    <string name="FindGroup">Other Groups</string>
    <string name="Searchbar">Search for Groups</string>
    <string name="GroupFinder">View other Groups</string>
    <string name="addGroup">Add Group</string>
    <string name="addGroupDesc">Create a new group</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="enter_group_description">Enter Group Description</string>
    <string name="enter_member_count">Enter Member Count</string>
    <string name="add_group">Add Group</string>
    <string name="enter_class_code">Enter Class Code</string>
    <string name="enter_class_code_in_year_quarter_class">Enter Class Code in YEAR/QUARTER/CLASS</string>
    <string name="viewProfile">View Profile</string>
    <string name="viewProfileDesc">Edit your profile</string>
    <string name="view_profile">View Profile</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="enter_your_school_year">Enter your school year</string>
    <string name="enter_your_major">Enter your major</string>
    <string name="save_profile">Save Profile</string>
</resources>
